<resources>


    <string name="app_name">LIFELOTTO</string>
    <string name="title_home"></string>
    <string name="title_dashboard"></string>
    <string name="title_notifications"></string>

    <string name="hello">Hello world</string>

    <!-- login layout-->
    <string name="log_email">Email</string>
    <string name="log_pass">Password</string>
    <string name="log_login">LOGIN</string>
    <string name="log_acc">Dont Have An Account?</string>
    <string name="log_signip">Sign Up</string>

    <!-- register layout-->
    <string name="reg_register">REGISTER</string>
    <string name="reg_username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_pass">Password</string>
    <string name="reg_conpass">Confirm Password</string>
    <string name="reg_accept">I accept the terms and conditions</string>
    <string name="reg_signup">SIGNUP</string>
    <string name="reg_ready">Ready Have An Account</string>
    <string name="reg_signin">Sign In</string>

    <!-- home layout-->
    <string name="hm_pop">Popular</string>
    <string name="hm_fav">Favorite</string>
    <string name="hm_FAQ">FAQ</string>
    <string name="hm_Settings">Settings</string>

    <!-- menu layout-->
    <string name="mn_types">Types</string>
    <string name="mn_Clothes">Clothes</string>
    <string name="mn_Food">Food</string>
    <string name="mn_Music">Music</string>
    <string name="mn_Activity">Activity</string>

    <!-- profile layout-->
    <string name="pf_username">Username</string>
    <string name="pf_pass">Password</string>
    <string name="pf_email">Email</string>
    <string name="pf_add">Address</string>
    <string name="pf_change">Change</string>
    <string name="pf_edit_pf">Edit Profile</string>
    <string name="pf_logout">Logout</string>

    <!-- setting layout-->
    <string name="stt_settings">Settings</string>
    <string name="stt_language">Language</string>
    <string name="stt_rate_this_app">Rate this App</string>
    <string name="stt_guide_book">Guide Book</string>
    <string name="stt_faq">FAQ</string>
    <string name="stt_deactivate">DEACTIVATE</string>

    <!-- activity generate layout-->
    <string name="act_act_gv">Generate Value</string>
    <string name="act_act_btng">Generate</string>

    <!-- activity menu layout-->
    <string name="act_menu_title">Activity</string>
    <string name="act_menu_phy">Physical</string>
    <string name="act_menu_dev">Self Development</string>

    <!-- clothes menu layout-->
    <string name="clo_menu_title">Clothes</string>
    <string name="clo_menu_formal">Formal</string>
    <string name="clo_menu_casual">Casual</string>
    <string name="clo_menu_casualchic">Casual Chic</string>

    <!-- food menu layout-->
    <string name="food_menu_title">Food</string>
    <string name="food_menu_breakfast">Breakfast</string>
    <string name="food_menu_lunch">Lunch</string>
    <string name="food_menu_dinner">Dinner</string>
    <string name="food_menu_snack">Snack</string>

    <!-- music menu layout-->
    <string name="music_menu_title">Music</string>
    <string name="music_menu_thai">Thai</string>
    <string name="music_menu_inter">International</string>

    <!-- music inter menu layout-->
    <string name="inter_menu_title">Music : </string>
    <string name="inter_menu_inter">International</string>
    <string name="inter_menu_pop">Pop</string>
    <string name="inter_menu_rap">Rap</string>
    <string name="inter_menu_rock">Rock</string>
    <string name="inter_menu_jazz">Jazz</string>

    <!-- music thai menu layout-->
    <string name="thai_menu_title">Music : Thai</string>
    <string name="thai_menu_pop">Pop</string>
    <string name="thai_menu_rap">Rap</string>
    <string name="thai_menu_rock">Rock</string>
    <string name="thai_menu_jazz">Jazz</string>

    <!-- contact layout -->
    <string name="contact_title">Contact Us</string>
    <string name="contact_add">123 Moo 16 Mitraphap Road, Mueang District, Khon Kaen Province 40002</string>
    <string name="contact_name">Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_message">Message</string>
    <string name="contact_btn">Send Message</string>

    <!-- Dice layout -->
    <string name="Dice_title">Dice Roller</string>

    <!-- faq layout -->
    <string name="faq_title">FAQ</string>

    <!-- fav layout -->
    <string name="fav_title">Favorite</string>

    <!-- privacy layout -->
    <string name="pp_title">Privacy Policy</string>
    <string name="pp_text1">Built the LIFELOTTO app as a Free app. This SERVICE is provided by at no cost and is intended for use as is.</string>
    <string name="pp_text2">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</string>

    <!-- ques1_reg -->
    <string name="ques1_title">What is your occupation?</string>
    <string name="ques1_text1">Student</string>
    <string name="ques1_text2">Employee</string>
    <string name="ques1_text3">Business owner</string>
    <string name="ques1_text4">Prefer not to say</string>
    <string name="ques1_btn">Continue</string>


    <!-- ques2_reg -->
    <string name="ques2_title">Choose your gender</string>
    <string name="ques2_text1">Male</string>
    <string name="ques2_text2">Female</string>
    <string name="ques2_text3">LGBT</string>
    <string name="ques2_text4">Prefer not to say</string>
    <string name="ques2_btn">Continue</string>

    <!-- ques3_reg -->
    <string name="ques3_title">What is your age range?</string>
    <string name="ques3_text1">1-17 Year</string>
    <string name="ques3_text2">18-34 Year</string>
    <string name="ques3_text3">35-54 Year</string>
    <string name="ques3_text4">55 Years or above</string>
    <string name="ques3_btn">Continue</string>

    <!-- ques4_reg -->
    <string name="ques4_title">Are you vegetarian or do you eat only meat?</string>
    <string name="ques4_text1">Meat</string>
    <string name="ques4_text2">Vegetarian</string>
    <string name="ques4_text3">Both</string>
    <string name="ques4_text4">Not both</string>
    <string name="ques4_btn">Continue</string>

    <!-- change pass-->
    <string name="ch_pass1">Current Password</string>
    <string name="ch_pass2">New Password</string>
    <string name="ch_pass3">Confirm New Password</string>

    <!-- change username-->
    <string name="ch_name">Enter Username</string>

    <!-- rate app-->
    <string name="rate_app">Comment</string>

    <!-- language-->
    <string name="lang_title">Language</string>

</resources>