<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ch_pass1"
        android:inputType="textPassword"
        android:fontFamily="@font/eazy_chat"
        />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ch_pass2"
        android:inputType="textPassword"
        android:fontFamily="@font/eazy_chat"/>

    <EditText
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ch_pass3"
        android:inputType="textPassword"
        android:fontFamily="@font/eazy_chat"/>
</LinearLayout>
