<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_music_nation">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_music_inter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="110dp"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="186dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="187dp"
            android:text="@string/mn_types"
            android:textColor="#0cc0df"
            android:textSize="25dp"
            android:fontFamily="@font/eazy_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout18"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/menu_music_bg"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/eazy_chat"
            android:text="A global fusion of melodies to take you on a journey around the world, uniting cultures through harmonious beats."
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="52dp"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_title"
            android:textColor="#ffffff"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_inter"
            android:textColor="#ffffff"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_music" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout18"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout18"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout18">

        <Button
            android:id="@+id/btn_pop_inter"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_sub_music"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_pop"
            android:textAllCaps="false"
            android:textColor="#ffffff"

            android:textSize="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_rap_inter"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_sub_music"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_rap"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_jazz_inter"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/btn_sub_music"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_jazz"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_rock_inter"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/btn_sub_music"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/inter_menu_rock"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
