<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/eazy_chat"
            android:text="LIFELOTTO"
            android:textColor="#ffffff"
            android:textSize="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

   <!--     <ImageButton
            android:id="@+id/back_signup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="351dp"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back_white" />
-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout4"
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/reg_bg_float"
        android:elevation="20dp"
        android:foregroundGravity="fill_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Register_user"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="#0CBFDE"
            android:ems="10"
            android:fontFamily="@font/eazy_chat"
            android:hint="@string/reg_username"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:text=""
            android:textColorHint="#0CBFDE"
            android:textColor="#0CBFDE"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Register_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="#0CBFDE"
            android:ems="10"
            android:fontFamily="@font/eazy_chat"
            android:hint="@string/reg_email"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:text=""
            android:textColorHint="#0CBFDE"
            android:textColor="#0CBFDE"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/Register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="#0CBFDE"
            android:ems="10"
            android:fontFamily="@font/eazy_chat"
            android:hint="@string/reg_pass"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:password="true"
            android:text=""
            android:textColorHint="#0CBFDE"
            android:textColor="#0CBFDE"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/Register_cpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="316dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="#0CBFDE"
            android:ems="10"
            android:fontFamily="@font/eazy_chat"
            android:hint="@string/reg_conpass"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:password="true"
            android:text=""
            android:textColorHint="#0CBFDE"
            android:textColor="#0CBFDE"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/reg_register"
            android:textColor="#0cc0df"
            android:textSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Register_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/eazy_chat"
            android:letterSpacing="0.02"
            android:paddingTop="5dp"
            android:text="@string/reg_signup"
            android:textColor="#ffffff"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="378dp"
            android:layout_marginEnd="65dp"
            android:buttonTint="#0CBFDE"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/reg_accept"
            android:textColor="#0cc0df"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/eazy_chat"
        android:text="@string/reg_ready"
        android:textColor="#737373"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <TextView
        android:id="@+id/Register_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/eazy_chat"
        android:text="@string/reg_signin"
        android:textColor="#0cc0df"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>




