<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_food">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_food"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="110dp"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="186dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="187dp"
            android:text="@string/mn_types"
            android:textColor="#0cc0df"
            android:textSize="25dp"
            android:fontFamily="@font/eazy_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout18"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/menu_food_bg"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/eazy_chat"
            android:text="Indulge in fresh and exciting flavors with every dish. A fresh perspective on deliciousness in every menu."
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="84dp"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/food_menu_title"
            android:textColor="#ffffff"

            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_fd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout18"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout18"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout18">

        <Button
            android:id="@+id/btn_breakfast"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_sub_food"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/food_menu_breakfast"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:elevation="20dp"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_lunch"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_sub_food"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/food_menu_lunch"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Snack"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/btn_sub_food"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/food_menu_snack"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_dinner"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/btn_sub_food"
            android:fontFamily="@font/eazy_chat"
            android:text="@string/food_menu_dinner"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>